@@ -43,8 +43,8 @@ Vue.component('lms-sleep-dialog', {
         bus.$on('sleep.open', function(player) {
             this.player = player;
             this.sleepTime = undefined;
-            this.show = true;
             if (undefined!=this.player) {
+                this.show = true;
                 lmsCommand(this.player.id, ["sleep", "?"]).then(({data}) => {
                     if (data && data.result && data.result._sleep) {
                         this.sleepTime = parseInt(data.result._sleep);
@@ -68,6 +68,9 @@ Vue.component('lms-sleep-dialog', {
             this.initItems();
         }.bind(this));
         this.initItems();
+        bus.$on('noPlayers', function() {
+            this.show=false;
+        }.bind(this));
     },
     methods: {
         initItems() {
