@@ -103,7 +103,6 @@
   <script src="html/js/constants.js?r=[% material_revision %]"></script>
   <script src="html/js/currentcover.js?r=[% material_revision %]"></script>
   <script src="html/js/utils.js?r=[% material_revision %]"></script>
-  <script src="html/js/noplayers.js?r=[% material_revision %]"></script>
   <script src="html/js/noconnection.js?r=[% material_revision %]"></script>
   <script src="html/js/toolbar.js?r=[% material_revision %]"></script>
   <script src="html/js/bottomnav.js?r=[% material_revision %]"></script>
